# vernon_desk

./: CLAUDE.md  README.md  pyproject.toml
.superpowers/brainstorm/61396-1778244666/content/: approaches.html  design-section1.html  design-section2.html  type-scale.html
.superpowers/brainstorm/61396-1778244666/state/: server-stopped
.superpowers/brainstorm/69351-1778472050/content/: approaches.html  area-focus.html  color-mode.html  design-dashboard.html  design-form.html  design-list.html  vibe-ref.html  waiting.html
.superpowers/brainstorm/69351-1778472050/state/: server-stopped
.superpowers/brainstorm/97555-1778250951/content/: approach-a-detail.html  approaches.html  waiting.html
docs/: PRD.md
docs/superpowers/plans/: 2026-05-08-form-ux-polish.md  2026-05-08-typography-scale.md  2026-05-11-modern-ui-deep-polish.md  2026-06-15-quick-entry-pages.md
docs/superpowers/specs/: 2026-05-08-form-ux-polish-design.md  2026-05-08-typography-scale-design.md  2026-05-11-modern-ui-deep-polish-design.md  2026-06-15-onboarding-guides-design.md  2026-06-15-quick-entry-pages-design.md
vernon_desk/: boot.py  hooks.py  modules.txt
vernon_desk/fixtures/: workspace.json
vernon_desk/public/: public
vernon_desk/public/css/: vernon_desk.css  vernon_desk_guides.css  vernon_desk_quickentry.css
vernon_desk/public/js/: vernon_desk.js  vernon_desk_guides.js  vernon_desk_guides_data.js  vernon_desk_quickentry.js  vernon_desk_quickentry_data.js
vernon_desk/tests/: test_boot.py  test_guides.py  test_quickentry.py
vernon_desk/vernon_desk/page/sales_guide/: sales_guide.js  (+1 more)
(+18 files in other folders)
