[project]
name = "vernon_desk"
authors = [
    { name = "Vernon Corp", email = "dev@vernoncorp.com"}
]
description = "Custom Frappe desk layout — dual navbar, full-width content"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]

[tool.ruff]
line-length = 110
target-version = "py310"
